--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,14 @@
     <span class="fill-space"></span>
     <span>My App</span>
   </md-toolbar>
-  <md-sidenav #sidenav>
+  <md-sidenav #sidenav style="width: 90vh;">
     <md-toolbar>Application Menu</md-toolbar>
     <md-list>
       <md-list-item>Item 1</md-list-item>
       <md-list-item>Item 2</md-list-item>
       <md-list-item>Item 3</md-list-item>
     </md-list>
+    <md-toolbar>Settings</md-toolbar>
   </md-sidenav>
 
 
