--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,24 @@
     <span class="fill-space"></span>
     <span>My App</span>
   </md-toolbar>
-  <md-sidenav #sidenav style="width: 90vh;">
-    <md-toolbar>Application Menu</md-toolbar>
+
+  <md-card align="center">
+    <md-input-container>
+      <input mdInput (keyup)="onKey($event)" placeholder="What's your name?" name="name">
+    </md-input-container>
+  </md-card>
+  <md-card *ngIf="name" align="center">
+    <p>Hello {{name}}, how are you today? </p>
+  </md-card>
+
+  <md-sidenav #sidenav>
+    <md-toolbar>
+      <span>Application Menu</span>
+      <span class="fill-space"></span>
+      <span><button type="button" md-icon-button (click)="sidenav.close()"><i class="material-icons">close</i></button></span>
+
+
+    </md-toolbar>
     <md-list>
       <md-list-item>Item 1</md-list-item>
       <md-list-item>Item 2</md-list-item>
